change this to 0$ not arabic one  (_for element src/app/page.tsx > span_

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -56,7 +56,7 @@
     "free": {
       "title": "مجانًا",
       "description": "للمشاريع الشخصية والبدء.",
-      "price": "٠ د.إ",
+      "price": "$0",
       "period": "للأبد",
       "features": {
         "generate": "إنشاء معرض أعمال",
