for the last two feature that are in english in the arabic mode change t

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -75,7 +75,9 @@
         "all": "جميع ميزات الخطة المجانية",
         "download": "تنزيل الكود المصدري (ZIP)",
         "templates": "الوصول إلى القوالب المميزة",
-        "support": "دعم ذو أولوية"
+        "support": "دعم ذو أولوية",
+        "unlimitedGenerations": "إنشاء عدد غير محدود من معارض الأعمال",
+        "unlimitedDeployments": "عمليات نشر غير محدودة"
       },
       "cta": "الترقية إلى المميز"
     }
