make this part like circle moving not static and and interacitve and add

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -96,6 +96,18 @@
     "testimonial3": {
       "quote": "دعم اللغة العربية مع RTL المناسب رائع. من النادر رؤية هذا المستوى من الجودة والاهتمام بالتفاصيل لجمهور عالمي.",
       "title": "مديرة منتج"
+    },
+    "testimonial4": {
+      "quote": "يوفر لي UltraFolio ساعات من العمل في كل مرة أحتاج فيها إلى تحديث معرض أعمالي. إنه سريع وبديهي ويجعلني أبدو رائعًا.",
+      "title": "مصمم مستقل"
+    },
+    "testimonial5": {
+      "quote": "لقد استخدمت أدوات إنشاء مواقع الويب الأخرى، لكن لا شيء يقترب من UltraFolio. جودة التصميم والاهتمام بالتفاصيل لا مثيل لهما.",
+      "title": "مستشار تسويق"
+    },
+    "testimonial6": {
+      "quote": "القدرة على الانتقال من السيرة الذاتية إلى موقع ويب مباشر في دقائق هي ميزة مذهلة. لقد أوصيت به لجميع زملائي.",
+      "title": "عالم بيانات"
     }
   },
   "footer": {
