still the cards have different size I am just suggesting all of them sho

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -98,15 +98,15 @@
       "title": "مديرة منتج"
     },
     "testimonial4": {
-      "quote": "يوفر لي UltraFolio ساعات من العمل في كل مرة أحتاج فيها إلى تحديث معرض أعمالي. إنه سريع وبديهي ويجعلني أبدو رائعًا.",
+      "quote": "يوفر لي UltraFolio ساعات من العمل في كل مرة أحتاج فيها إلى تحديث معرض أعمالي. إنه سريع وبديهي ويجعلني أبدو رائعًا وأنيقًا.",
       "title": "مصمم مستقل"
     },
     "testimonial5": {
-      "quote": "لقد استخدمت أدوات إنشاء مواقع الويب الأخرى، لكن لا شيء يقترب من UltraFolio. جودة التصميم والاهتمام بالتفاصيل لا مثيل لهما.",
+      "quote": "لقد استخدمت أدوات أخرى، لكن لا شيء يقترب من UltraFolio. جودة التصميم والاهتمام بالتفاصيل لا مثيل لهما على الإطلاق.",
       "title": "مستشار تسويق"
     },
     "testimonial6": {
-      "quote": "القدرة على الانتقال من السيرة الذاتية إلى موقع ويب مباشر في دقائق هي ميزة مذهلة. لقد أوصيت به لجميع زملائي.",
+      "quote": "القدرة على الانتقال من السيرة الذاتية إلى موقع ويب مباشر في دقائق هي ميزة مذهلة. لقد أوصيت به لجميع زملائي وأصدقائي.",
       "title": "عالم بيانات"
     }
   },
