--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -98,15 +98,15 @@
       "title": "Product Manager"
     },
     "testimonial4": {
-      "quote": "UltraFolio saves me hours of work every time I need to update my portfolio. It's fast, intuitive, and makes me look great.",
+      "quote": "UltraFolio saves me hours of work every time I need to update my portfolio. It's fast, intuitive, and makes me look great. A truly essential tool.",
       "title": "Freelance Designer"
     },
     "testimonial5": {
-      "quote": "I've used other site builders, but nothing comes close to UltraFolio. The design quality and attention to detail are unparalleled.",
+      "quote": "I've used other site builders, but nothing comes close to UltraFolio. The design quality and attention to detail are simply unparalleled.",
       "title": "Marketing Consultant"
     },
     "testimonial6": {
-      "quote": "Being able to go from a resume to a live website in minutes is a superpower. I've recommended it to all my colleagues.",
+      "quote": "Being able to go from a resume to a live website in minutes is a superpower. I have recommended it to all my colleagues and friends.",
       "title": "Data Scientist"
     }
   },
