also add arabic mode for this page if I am using arabic mode also for th

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -225,5 +225,38 @@
         "submitButton": "أنشئ معرض أعمالي"
       }
     }
+  },
+  "loginPage": {
+    "title": "تسجيل الدخول",
+    "description": "أدخل بريدك الإلكتروني أدناه لتسجيل الدخول إلى حسابك",
+    "email": "البريد الإلكتروني",
+    "password": "كلمة المرور",
+    "forgotPassword": "هل نسيت كلمة المرور؟",
+    "loginButton": "تسجيل الدخول",
+    "orContinueWith": "أو المتابعة بواسطة",
+    "googleButton": "تسجيل الدخول باستخدام جوجل",
+    "noAccount": "ليس لديك حساب؟",
+    "signupLink": "إنشاء حساب"
+  },
+  "signupPage": {
+    "title": "إنشاء حساب",
+    "description": "أدخل معلوماتك لإنشاء حساب",
+    "displayName": "الاسم المعروض",
+    "email": "البريد الإلكتروني",
+    "password": "كلمة المرور",
+    "createButton": "إنشاء حساب",
+    "orContinueWith": "أو المتابعة بواسطة",
+    "googleButton": "إنشاء حساب باستخدام جوجل",
+    "hasAccount": "هل لديك حساب بالفعل؟",
+    "loginLink": "تسجيل الدخول"
+  },
+  "forgotPasswordPage": {
+    "title": "هل نسيت كلمة المرور",
+    "description": "أدخل بريدك الإلكتروني وسنرسل لك رابطًا لإعادة تعيين كلمة المرور الخاصة بك.",
+    "email": "البريد الإلكتروني",
+    "sendButton": "إرسال رابط إعادة التعيين",
+    "successMessage": "تم إرسال بريد إلكتروني لإعادة تعيين كلمة المرور! يرجى التحقق من بريدك الوارد.",
+    "rememberPassword": "هل تذكرت كلمة المرور؟",
+    "loginLink": "تسجيل الدخول"
   }
 }
