where is the languages and ceritifcates  (_for element src/app/create/pa

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -215,6 +215,7 @@
           "title": "اللغات (اختياري)",
           "language": "اللغة",
           "proficiency": {
+            "level": "مستوى الإتقان",
             "beginner": "مبتدئ",
             "intermediate": "متوسط",
             "advanced": "متقدم",
