add navigation bar and also arabic version and also back to the pervious

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -259,5 +259,17 @@
     "successMessage": "تم إرسال بريد إلكتروني لإعادة تعيين كلمة المرور! يرجى التحقق من بريدك الوارد.",
     "rememberPassword": "هل تذكرت كلمة المرور؟",
     "loginLink": "تسجيل الدخول"
+  },
+  "chooseTemplatePage": {
+    "title": "اختر قالبًا",
+    "subtitle": "اختر تصميمًا لمعرض أعمالك. يمكنك تخصيص الألوان لاحقًا.",
+    "modernTitle": "قالب حديث",
+    "modernDesc": "تصميم أنيق وعصري مع طباعة جريئة ومسافات سلسة.",
+    "minimalistTitle": "قالب بسيط",
+    "minimalistDesc": "نظيف وبسيط، يركز بشكل كامل على المحتوى الخاص بك.",
+    "basicTitle": "قالب أساسي",
+    "basicDesc": "تصميم مباشر وكلاسيكي يشبه السيرة الذاتية.",
+    "generateButton": "أنشئ معرض أعمالي",
+    "backButton": "رجوع"
   }
 }
