for the sign up it should direct to the login page and if the user sign

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -168,6 +168,8 @@
         "email": "البريد الإلكتروني",
         "phone": "الهاتف",
         "website": "الموقع الإلكتروني / معرض الأعمال",
+        "linkedin": "رابط لينكد إن",
+        "github": "رابط جيثب",
         "profilePicture": "صورة الملف الشخصي (اختياري)",
         "nextButton": "الخطوة التالية ← الخبرة"
       },
@@ -237,7 +239,9 @@
     "orContinueWith": "أو المتابعة بواسطة",
     "googleButton": "تسجيل الدخول باستخدام جوجل",
     "noAccount": "ليس لديك حساب؟",
-    "signupLink": "إنشاء حساب"
+    "signupLink": "إنشاء حساب",
+    "verificationSent": "تم إرسال بريد التحقق! يرجى التحقق من بريدك الوارد والنقر على الرابط لتفعيل حسابك قبل تسجيل الدخول.",
+    "verifyEmailError": "يرجى التحقق من بريدك الإلكتروني قبل تسجيل الدخول. تم إرسال بريد تحقق جديد."
   },
   "signupPage": {
     "title": "إنشاء حساب",
